[package]
name = "playlist-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.0"
serde_json = "1.0"
serde = { version = "1.0.137", features = ["derive"] }
rspotify = { version = "0.11.0", features = ["cli", "env-file"] }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
futures = { version = "0.3.17" }
futures-util = "0.3.17"
env_logger = { version = "0.10.0", default-features = false }
getrandom = "0.2.6"
log = "0.4.0"
cookie = "0.17"
chrono = "0.4.26"
futures-retry = "0.6.0"
